[package]
name = "ocf"
version = "0.2.0-alpha.6"
authors = ["arcnmx"]
build = "build.rs"

description = "Open Container Specification"
documentation = "http://arcnmx.github.io/ocf-rs/ocf/"
repository = "https://github.com/arcnmx/ocf-rs"
readme = "README.md"
keywords = ["oci", "open", "container", "docker", "runc"]
license = "MIT"

[lib]
path = "src/mod.rs"

[dependencies]
serde = "^0.7.0"
serde_macros = { version = "^0.7.0", optional = true }
serde_json = "^0.7.0"
serde-value = "^0.1.0"
semver = "^0.2.1"

[build-dependencies]
serde_codegen = { version = "^0.7.9", optional = true }

[features]
stable = ["serde_codegen"]
unstable = ["serde_macros"]
